<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/item_image_view"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <RelativeLayout
                android:id="@+id/edit_image_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/item_image_view"
                android:layout_alignRight="@+id/item_image_view"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:alpha="0.7"
                android:background="@android:color/white"
                android:paddingBottom="2dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="2dp">

                <ImageButton
                    android:id="@+id/gallery_image_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@android:drawable/ic_menu_gallery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:layout_toRightOf="@id/gallery_image_button"
                    android:text="Edit"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            style="@style/RowContainerStyle"
            android:paddingTop="8dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/item" />

            <RelativeLayout style="@style/DetailsContainerStyle">

                <TextView
                    android:id="@+id/item_name_text_view"
                    style="@style/DetailsTextStyle"
                    tools:text="Item Name" />

                <EditText
                    android:id="@+id/item_name_edit_text"
                    style="@style/DetailsEditTextStyle"
                    android:inputType="textCapWords" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_container"
            style="@style/RowContainerStyle"
            android:paddingTop="8dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/category_id_text_view"
                style="@style/CategoryStyle"
                android:text="@string/id" />

            <RelativeLayout style="@style/DetailsContainerStyle">

                <TextView
                    android:id="@+id/item_id_text_view"
                    style="@style/DetailsTextStyle"
                    tools:text="ID" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/RowContainerStyle"
            android:paddingTop="8dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/price" />

            <RelativeLayout style="@style/DetailsContainerStyle">

                <TextView
                    android:id="@+id/item_price_text_view"
                    style="@style/DetailsTextStyle"
                    tools:text="Price" />

                <EditText
                    android:id="@+id/item_price_edit_text"
                    style="@style/DetailsEditTextStyle"
                    android:inputType="numberDecimal" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/RowContainerStyle"
            android:paddingTop="8dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier" />

            <RelativeLayout style="@style/DetailsContainerStyle">

                <TextView
                    android:id="@+id/item_supplier_text_view"
                    style="@style/DetailsTextStyle"
                    tools:text="Supplier" />

                <EditText
                    android:id="@+id/item_supplier_edit_text"
                    style="@style/DetailsEditTextStyle"
                    android:inputType="textCapWords" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/RowContainerStyle"
            android:paddingTop="8dp">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier_email" />

            <RelativeLayout style="@style/DetailsContainerStyle">

                <TextView
                    android:id="@+id/supplier_email_text_view"
                    style="@style/DetailsTextStyle"
                    tools:text="Supplier Email" />

                <EditText
                    android:id="@+id/supplier_email_edit_text"
                    style="@style/DetailsEditTextStyle"
                    android:inputType="textEmailAddress" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout style="@style/RowContainerStyle">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity" />

            <RelativeLayout
                style="@style/DetailsContainerStyle"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/item_quantity_text_view"
                    style="@style/DetailsTextStyle"
                    tools:text="Quantity" />

                <EditText
                    android:id="@+id/item_quantity_edit_text"
                    style="@style/DetailsEditTextStyle"
                    android:inputType="number" />

                <LinearLayout
                    android:id="@+id/quantity_adjustment_container"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/decrement_button"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_button"
                        android:backgroundTint="@android:color/darker_gray"
                        android:text="-"
                        android:textAppearance="?android:textAppearanceLarge" />

                    <EditText
                        android:id="@+id/adjustment_value_edit_text"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_button"
                        android:gravity="center"
                        android:inputType="number"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <Button
                        android:id="@+id/increment_button"
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_button"
                        android:backgroundTint="@android:color/darker_gray"
                        android:text="+"
                        android:textAppearance="?android:textAppearanceLarge" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/save_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save" />

    </LinearLayout>

</ScrollView>